# nyquist

./: CMakeLists.txt  Makefile  README  Readme.txt  UpgradeLog.XML  advantages.txt  comp-ide.bat  convert.dsp  create-osx-app.sh  dm~  files.txt  howtorelease.txt  init.lsp~  jny  jnyqide.bat  license.txt  ny  ny-gold  nyquist-vc2010.sln  nyquist-vs2012.sln  nyquist-vs2012.vcxproj  nyquist.dsp  nyquist.dsw  nyquist.sln  nyquist.vcproj  nyquist.vcxproj  nyquist.vcxproj.filters  nyquist100.sln  nyqwin-vs2012.vcproj  nyqwin-vs2012.vcxproj  nyqwin.dsp  nyqwin.vcproj  nyqwin.vcxproj  nyqwin.vcxproj.filters  release.bat  releasenyqide.bat  releasenyqwin.bat  sfreadme.txt  todo.txt
cmt/: cext.h  cmdline.c  midifns.c  moxc.c  seq.c  seqmwrite.c  userio.c
demos/: FM-voices-Chowning.sal  a-snd-file.snd  arp.sal  arpeggiator.htm  bandfx.htm  cellularautomata.htm  convolution.htm  demo-snd.aiff  demo.mid  distortion.htm  examples.lsp  examples.sal  examples_home.htm  fft_demo.lsp  fft_tutorial.htm  index.htm  lpc_tutorial.htm  lpcdemo.lsp  midi_tutorial.htm  osc-test.lsp  phasevocoder.htm  piano.htm  pitch_change.htm  probability_distributions.htm  rhythm_tutorial.htm  scratch_tutorial.htm  sequence_example.htm  shepard.lsp  slider-demos.sal  stktest.lsp  voice_synthesis.htm  vosim.sal  warble_tutorial.htm  wind_tutorial.htm
doc/: foot.html  guide.html  home.html  indx.html  musicbib.html  nyqman.txt  nyquiststyle.css  part1.html  part10.html  part11.html  part12.html  part13.html  part14.html  part15.html  part16.html  part17.html  part18.html  part19.html  part2.html  part3.html  part4.html  part5.html  part6.html  part7.html  part8.html  part9.html  title.html
docsrc/: scribe.htm  toafs.bat  toafs.sh
extensions/: README.txt  extlist-template.txt  extlist.txt
flac-1.3.0-subset/: FLAC.sln  UpgradeLog.htm  copylibs.bat
jnyqide/: BareBonesBrowserLaunch.java  CodePane.java  EnvelopeFrame.java  ExtensionManager.java  FindDialog.java  Info.plist  InstrInfo.java  InstrumentCharacteristics.java  JNonHiddenableInternalFrame.java  JNonHideableInternalFrame.java  Jslide.java  LispFileFilter.java  Main.java  MainFrame.java  MainFrame_AboutBox.java  MiniBrowser.java  NotFoundDialog.java  Nsliders.java  NyqPlot.java  NyquistFile.java  NyquistFileFilter.java  NyquistThread.java  NyquistWords.txt  Pair.java  Piano_Roll.java  PlotFrame.java  PlotMouseAdapter.java  PopupListener.java  PreferencesDialog.java  README.txt  ReplaceDialog.java  SalFileFilter.java  SalWordList.java  SpecialMacHandler.java  SpringUtilities.java  TextColor.java  Trie.java  UPICFrame.java  WindowsRegistry.java  WordList.java  (+25 more)
lib/: bandfx.lsp  compress.lsp  dist-test.lsp  distributions.lsp  dtmf.lsp  extensions.lsp  gnuplot.sal  gran.lsp  grapheq.lsp  instruments.txt  labels.sal  lpc.lsp  midishow.lsp  moog.lsp  pianosyn.lsp  plugin-test.lsp  regression.sal  reverb.lsp  reverse.lsp  sdl.lsp  soften.lsp  spatial.lsp  spectral-centroid.lsp  spectral-centroid.sal  spectrum.lsp  statistics.lsp  surround.lsp  time-delay-fns.lsp  vectors.lsp  xm-test.lsp
liblo/: Makefile.in  Makefile.osx  README.txt  address.c  blob.c  bundle.c  config.h.in  config.status  configure  configure.ac  libtool  lo_types_internal.h  message.c  method.c  nonblocking_server_example.c  pattern_match.c  send.c  server.c  timetag.c
lpc/: compile.txt  lpc-orig.lsp  lpc.lsp  lpcdemo-orig.lsp  lpcdemo.lsp  prims-ref.txt  readme.txt
macosx-xc4/: Info.plist  Makefile  Readme.txt  manifest.txt
macosxproject/: CMakeLists.txt  Nyquist.icns  NyquistIDE-Info.plist  README  README.txt  nycon2008.xcf  nyquist.icns
macproject/: NyquistIcon  NyquistIcon.sit  mac_port_changes.txt  nyquist.mcp
misc/: Makefile  cmdline.c  core.15347  filelist.dsp  filelist.vcproj  filelist.vcxproj  filelist.vcxproj.filters  files.lsp  installer-DS_Store  installer-background.pptx  intgen  intgen.c  mac-to-win.lsp  makefile.lsp  packer.dsp  packer.vcproj  packer.vcxproj  packer.vcxproj.filters  transfiles.lsp  unpacker.dsp  unpacker.vcproj  unpacker.vcxproj  unpacker.vcxproj.filters
nylsf/: CMakeLists.txt  README.txt  aiff.c  broadcast.c  caf.c  common.c  common.h  config.h  export-nylsf.bat  file_io.c  flac.c  ppc-config.h  sfconfig.h  sndfile.c  sndfile.h  static.cmake  wav.c
nylsf/G72x/: g72x_test.c
nylsf/GSM610/: add.c  code.c  decode.c  gsm610_priv.h  gsm_decode.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
nyqide/: readme-vcl.txt
nyqsrc/: add.c  add.h  avg.c  convolve.c  downsample.c  f0.cpp  falloc.c  fft.c  fftw.h  local.c  multiread.c  multiseq.c  nyq-osc-server.c  nyx.c  phasevocoder.c  pvshell.c  pvshell.h  seqext.c  seqfnint.c  seqfnint.lsp  seqfnintdefs.h  seqfnintptrs.h  sliders.c  sliders.h  sndfmt.h  sndfn.cl  sndfn.wcl  sndfnint.c  sndfnint.lsp  sndfnintdefs.h  sndfnintptrs.h  sndread.c  sndseq.c  sndsliders.c  sndwrite.c  sndwritepa.c  sound.c  sound.h  stoponzero.c  trigger.c  (+1 more)
nyqstk/: instr.cpp  instr.h  stkinit.cpp
portaudio/: Makefile  config.cache  config.status  libtool
portaudio-oldv19/: Makefile  config.status
portaudio_test/: portaudio_test.dsp  syncwrite  syncwrite.c
runtime/: compress.lsp  dspprims-dbg.lsp  dspprims.lsp  fileio.lsp  init.lsp  misc.lsp  nyinit-dbg.lsp  nyinit.lsp  nyquist-dbg.lsp  nyquist.lsp  sal-parse.lsp  sal.lsp  seq.lsp  seqmidi.lsp  sliders.lsp  spec-plot.lsp  spectral-analysis.lsp  stk.lsp  system.lsp  typechecks.sal  xm.lsp
snd/: audiolinux.c  audiomac.c  audiomac.h  audiooss.c  audiopa.c  audiors6k.c  audiosgi.c  audiowin32.c  audiowin32.h  snd.c  snd.h  snd.htm  snd.txt  sndconfig.h  sndcvt.c  sndfileio.h  sndheader.c  sndio.c  sndlinux.c  sndmac.c  sndmac.h  sndwin32.c  wxsnd.cpp  wxsnd.h
test/: alex.lsp  alpass.lsp  articulator1.txt  audio.lsp  cnvl.lsp  comb.lsp  convolve.lsp  delaytest.lsp  envtest.lsp  eq.lsp  fft.lsp  fmfb-test.lsp  fmfbv-test.lsp  gab.lsp  gatetest.lsp  gr.lsp  ifft.lsp  ifftnt.lsp  init.lsp  linux-segfault.lsp  midi2.lsp  ms2.lsp  multiseq.lsp  natbug.lsp  nonewline.lsp  overwrite.lsp  product.lsp  rbd.lsp  readme  s-add-to.lsp  (+42 more)
(+1426 files in other folders)
